force-app/main/default/objects/Receipt_Details__c/Receipt_Details__c.object-meta.xml
<CustomObject>
    <label>Receipt Details</label>
    <nameField>
        <displayFormat>RD-{00000}</displayFormat>
        <label>Receipt Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>