force-app/main/default/objects/Receipt_Details__c/fields/Adjust_Money__c.field-meta.xml
<CustomField>
    <fullName>Adjust_Money__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjust Money</label>
    <type>Checkbox</type>
</CustomField>