force-app/main/default/objects/Receipt_Details__c/fields/Amount_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Adjusted__c</fullName>
    <label>Amount Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>