force-app/main/default/objects/Receipt_Details__c/fields/Charge10Name__c.field-meta.xml
<CustomField>
    <fullName>Charge10Name__c</fullName>
    <label>Charge 10 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>