force-app/main/default/objects/Receipt_Details__c/fields/Charge_13_Tax_Apportioned__c.field-meta.xml
<CustomField>
    <fullName>Charge_13_Tax_Apportioned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charge 13 Tax Apportioned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>