force-app/main/default/objects/Receipt_Details__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charges</label>
    <referenceTo>ProjectCharges__c</referenceTo>
    <relationshipLabel>Receipt Details</relationshipLabel>
    <relationshipName>Receipt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>