force-app/main/default/objects/Receipt_Details__c/fields/Charges_Apportioned__c.field-meta.xml
<CustomField>
    <fullName>Charges_Apportioned__c</fullName>
    <inlineHelpText>Doesn&apos;t include the interest amount if any apportioned using this receipt.</inlineHelpText>
    <label>Charges Apportioned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>