force-app/main/default/objects/Receipt_Details__c/fields/Debit_Amount_Apportioned__c.field-meta.xml
<CustomField>
    <fullName>Debit_Amount_Apportioned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Debit Amount Apportioned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>