force-app/main/default/objects/Receipt_Details__c/fields/Debit_Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Debit_Charge_Name__c</fullName>
    <label>Debit Charge Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest Charges</fullName>
            </value>
            <value>
                <fullName>Brokerage Reversal</fullName>
            </value>
            <value>
                <fullName>Cheque Bounce</fullName>
            </value>
            <value>
                <fullName>Interior Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>