force-app/main/default/objects/Receipt_Details__c/fields/For_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>For_Service_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is the receipt for the service tax part of the charge</description>
    <label>For Service Tax</label>
    <type>Checkbox</type>
</CustomField>