force-app/main/default/objects/Receipt_Details__c/fields/Infrastructure_Charges_Balance_RecDet__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Charges_Balance_RecDet__c</fullName>
    <label>Infrastructure Charges Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>