force-app/main/default/objects/Receipt_Details__c/fields/Interest_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount_Paid__c</fullName>
    <label>Interest Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>