force-app/main/default/objects/Receipt_Details__c/fields/Interest_flatcost_waived__c.field-meta.xml
<CustomField>
    <fullName>Interest_flatcost_waived__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest flatcost waived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>