force-app/main/default/objects/Receipt_Details__c/fields/Interest_on_late_amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_late_amount_paid__c</fullName>
    <formula>If ( (DATEVALUE(CreatedDate) &gt;  Demand__r.Due_Date__c ),
(Total_Amount_adjusted__c *  
$Setup.ROI_del__c.ROI__c * (  DATEVALUE(CreatedDate) -  Demand__r.Due_Date__c )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest on late amount paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>