force-app/main/default/objects/Receipt_Details__c/fields/Is_Interest_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Is_Interest_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Interest Settlement</label>
    <type>Checkbox</type>
</CustomField>