force-app/main/default/objects/Receipt_Details__c/fields/Money_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Money_Adjusted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Money Adjusted</label>
    <type>Checkbox</type>
</CustomField>