force-app/main/default/objects/Receipt_Details__c/fields/Tax_On_Interest_on_Late_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Tax_On_Interest_on_Late_Amount_Paid__c</fullName>
    <formula>Interest_on_late_amount_paid__c * 18/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT On Interest on Late Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>