force-app/main/default/objects/Receipt_Details__c/fields/Tax_on_Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>Tax_on_Interest_Paid__c</fullName>
    <label>VAT on Interest Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>