force-app/main/default/objects/Receipt_Details__c/fields/Tax_On_Interest_Waived__c.field-meta.xml
<CustomField>
    <fullName>Tax_On_Interest_Waived__c</fullName>
    <label>VAT On Interest Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>