force-app/main/default/objects/Receipt_Details__c/fields/Taxes_Apportioned__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Apportioned__c</fullName>
    <inlineHelpText>Doesn&apos;t include the tax interest amount if any apportioned using this receipt.</inlineHelpText>
    <label>VATs Apportioned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>