force-app/main/default/objects/Receipt_Details__c/fields/Total_Amount_Apportined__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Apportined__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Amount Apportioned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>