force-app/main/default/objects/Receipt_Details__c/fields/Total_Tax_Apportioned__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Apportioned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total VAT Apportioned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>